--- a/index.html
+++ b/index.html
@@ -254,6 +254,24 @@ isiDropdown();
 
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Test JS</h2>
+
+<button onclick="tes()">Klik aku</button>
+
+<p id="hasil"></p>
+
+<script>
+function tes() {
+   document.getElementById("hasil").innerHTML = "JavaScript BERJALAN ✔";
+}
+</script>
+
+</body>
+</html>
 
 
 
