--- a/index.html
+++ b/index.html
@@ -1,277 +1,196 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<title>SPK Diagnosa Penyakit Tumbuhan</title>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>SPK Diagnosa Tanaman</title>
 <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6') no-repeat center center fixed;
-        background-size: cover;
-        color: #fff;
-        overflow-x: hidden;
-    }
+body {
+    font-family:'Poppins',sans-serif;
+    margin:0; padding:0; color:#0a3d62;
+    background:linear-gradient(135deg,#e6f9e6,#f3fff3);
+}
+.page { display:none; padding:20px; }
+.active { display:block; }
 
-    .overlay {
-        background: rgba(0,0,0,0.6);
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
+/* Navigasi */
+.nav {
+    width:100%; background:rgba(255,255,255,0.85); padding:12px 16px; display:flex;
+    justify-content:center; gap:12px; position:sticky; top:0; z-index:5; border-bottom:3px solid #2e7d32; backdrop-filter: blur(6px);
+}
+.nav button {
+    padding:10px 20px; border:none; border-radius:30px; background:#2e7d32; color:white; font-weight:600; cursor:pointer; transition:0.25s;
+}
+.nav button:hover { background:#1b5e20; transform:translateY(-3px); }
 
-    .container {
-        position: relative;
-        z-index: 10;
-        text-align: center;
-        padding-top: 120px;
-        animation: fadeIn 1.2s ease-in-out;
-    }
+/* Container */
+.container {
+    max-width:900px; margin:28px auto; padding:24px; border-radius:18px; box-shadow:0 10px 25px rgba(0,0,0,0.15);
+    animation:fadeSlide 0.7s ease-out;
+    background:url('https://images.unsplash.com/photo-1612865547332-1c63bbf1b9fa?auto=format&fit=crop&w=900&q=80') center/cover no-repeat;
+    color:white;
+}
+@keyframes fadeSlide { from{opacity:0; transform:translateY(25px);} to{opacity:1; transform:translateY(0);} }
 
-    @keyframes fadeIn {
-        from { opacity:0; transform: translateY(20px); }
-        to { opacity:1; transform: translateY(0); }
-    }
+select, button.spkBtn {
+    width:100%; padding:14px; margin-top:14px; border-radius:12px; border:1px solid #66bb6a; font-size:16px; transition:0.18s;
+}
+button.spkBtn {
+    background:#2e7d32; color:white; font-weight:600; cursor:pointer; border:none;
+}
+button.spkBtn:hover { transform:scale(1.03); background:#1b5e20; }
 
-    h1 { font-size: 45px; text-shadow: 2px 2px 8px #000; }
-    h3 { text-shadow: 2px 2px 6px #000; }
+.hasil {
+    background:rgba(232,245,233,0.9); padding:18px; margin-top:18px;
+    border-left:6px solid #2e7d32; border-radius:10px; color:#0a3d62;
+}
 
-    /* ANIMASI TOMBOL */
-    button {
-        padding: 15px 25px;
-        font-size: 18px;
-        margin-top: 20px;
-        border: none;
-        cursor: pointer;
-        background: #4CAF50;
-        color: white;
-        border-radius: 8px;
-        transition: transform 0.25s ease, box-shadow 0.25s ease;
-    }
+table {
+    width:100%; border-collapse:collapse; margin-top:18px;
+    background:rgba(255,255,255,0.9); color:#0a3d62;
+}
+th, td { border:1px solid #c8e6c9; padding:12px; text-align:left; }
+th { background:#2e7d32; color:white; }
+tr:nth-child(even){ background:rgba(241,248,241,0.8); }
 
-    button:hover {
-        transform: scale(1.08);
-        box-shadow: 0px 0px 15px #4CAF50;
-    }
+/* Welcome screen */
+#welcomeScreen {
+    position:fixed; top:0; left:0; width:100%; height:100vh;
+    background:linear-gradient(135deg,#388e3c,#2e7d32,#66bb6a);
+    display:flex; flex-direction:column; justify-content:center; align-items:center;
+    text-align:center; color:white; padding:20px; animation:fadeIn 0.8s ease-out;
+}
+@keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
+@keyframes fadeOut { from{opacity:1;} to{opacity:0;} }
 
-    /* SPK CARD */
-    #spkPage {
-        display: none;
-        background: rgba(255,255,255,0.95);
-        color: black;
-        padding: 20px;
-        margin: 50px auto;
-        width: 520px;
-        border-radius: 12px;
-        animation: fadeIn 0.9s ease-in-out;
-    }
+.startBtn {
+    padding:14px 30px; font-size:18px; border:none; border-radius:14px;
+    background:white; color:#2e7d32; font-weight:700; cursor:pointer;
+}
+.startBtn:hover { transform:scale(1.07); }
 
-    select, .btnDiagnosa {
-        width: 100%;
-        padding: 12px;
-        margin-top: 10px;
-        font-size: 16px;
-    }
-
-    .btnDiagnosa {
-        background: #4CAF50;
-        color:white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: transform 0.25s ease, box-shadow 0.25s ease;
-    }
-
-    .btnDiagnosa:hover {
-        transform: scale(1.05);
-        box-shadow: 0px 0px 10px #4CAF50;
-    }
-
-    .result-box {
-        background: #e7ffe7;
-        padding: 15px;
-        margin-top: 20px;
-        border-radius: 8px;
-        border-left: 5px solid #4CAF50;
-    }
-
-    /* ANIMASI GAMBAR */
-    .img-penyakit {
-        width: 100%;
-        border-radius: 10px;
-        margin: 10px 0;
-        opacity: 0;
-        transform: scale(0.9);
-        animation: zoomFade 0.7s forwards ease-out;
-    }
-
-    @keyframes zoomFade {
-        to {
-            opacity: 1;
-            transform: scale(1);
-        }
-    }
-
+@media(max-width:700px){
+    .container{margin:18px; padding:18px;} .nav{gap:6px;}
+}
 </style>
-
 </head>
 <body>
 
-<div class="overlay"></div>
-
-<!-- MENU UTAMA -->
-<div class="container" id="menuUtama">
-    <h1>SISTEM PENDUKUNG KEPUTUSAN<br>PENYAKIT TANAMAN</h1>
-    <h3>KELOMPOK 4 – TEKNOLOGI INFORMASI</h3>
-
-    <button onclick="bukaSPK()">Mulai Diagnosa Penyakit</button>
+<!-- Welcome Screen -->
+<div id="welcomeScreen">
+    <h1>🌱 SPK Tanaman</h1>
+    <p>Sistem Pendukung Keputusan Diagnosa Penyakit Tanaman</p>
+    <button id="btnMulai" class="startBtn">Mulai</button>
 </div>
 
-<!-- HALAMAN SPK -->
-<div id="spkPage">
+<!-- Page Anggota -->
+<div class="page" id="pageAnggota">
+    <div class="container">
+        <h2>Informasi Kelompok 4</h2>
+        <p>Daftar Anggota:</p>
+        <ul>
+            <li>Tiara Farliani Mamonto – 250311080023</li>
+            <li>Juandri G. Sepang – 250311080018</li>
+            <li>Lotta Virni Br Tumanggor – 250311080019</li>
+            <li>Rahel Tahulending – 250311080020</li>
+            <li>Salli Mustika Sihaloho – 250311080021</li>
+        </ul>
+        <div style="text-align:center; margin-top:20px;">
+            <button id="btnTampilkanMenu" class="spkBtn">Tampilkan Menu</button>
+        </div>
+    </div>
+</div>
 
-    <h2 style="text-align:center;">Diagnosa Penyakit Tumbuhan</h2>
-    <p style="text-align:center;">Pilih gejala untuk mengetahui penyakitnya</p>
+<!-- Page Diagnosa -->
+<div class="page" id="page1">
+    <div class="nav">
+        <button data-target="pageAnggota">Anggota</button>
+        <button data-target="page1">Diagnosa</button>
+        <button data-target="page2">Data Keseluruhan</button>
+    </div>
+    <div class="container">
+        <h2>Menu SPK Penyakit Tanaman</h2>
+        <label for="tanaman">Pilih Nama Tanaman:</label>
+        <select id="tanaman"></select>
+        <button class="spkBtn" id="btnDiagnosa">Diagnosa</button>
+        <div id="output" class="hasil" style="display:none;"></div>
+    </div>
+</div>
 
-    <label>Gejala 1:</label>
-    <select id="gejala1" onchange="updateGejala2()">
-        <option value="">-- pilih gejala --</option>
-    </select>
-
-    <label>Gejala 2:</label>
-    <select id="gejala2">
-        <option value="">-- pilih gejala --</option>
-    </select>
-
-    <button class="btnDiagnosa" onclick="diagnosa()">Diagnosa</button>
-
-    <div id="hasil"></div>
-
+<!-- Page Data Keseluruhan -->
+<div class="page" id="page2">
+    <div class="nav">
+        <button data-target="pageAnggota">Anggota</button>
+        <button data-target="page1">Diagnosa</button>
+        <button data-target="page2">Data Keseluruhan</button>
+    </div>
+    <div class="container">
+        <h2>Data Lengkap 10 Tanaman</h2>
+        <div id="tableWrap"></div>
+    </div>
 </div>
 
 <script>
-// DATA + GAMBAR
-const data = [
-    { no:1, tanaman:"Anggur", penyakit:"Embun Tepung", gejala:"Daun Menguning dan Menggulung", 
-      img:"https://i.postimg.cc/fR7q7z9z/powdery-mildew.jpg" },
+const data={
+    cabai:{nama:"Cabai",ilmiah:"Capsicum annuum",penyakit:"Antraknosa",patogen:"Colletotrichum capsici / C. gloeosporioides",gejala:"Buah muncul bercak hitam cekung, membusuk, dan rontok."},
+    tomat:{nama:"Tomat",ilmiah:"Solanum lycopersicum",penyakit:"Layu Fusarium",patogen:"Fusarium oxysporum f. sp. lycopersici",gejala:"Daun menguning dari bawah, tanaman layu, batang kecoklatan."},
+    bawang:{nama:"Bawang Merah",ilmiah:"Allium ascalonicum",penyakit:"Busuk Daun Alternaria",patogen:"Alternaria porri",gejala:"Daun terdapat bercak ungu kecoklatan, ujung daun mengering."},
+    kentang:{nama:"Kentang",ilmiah:"Solanum tuberosum",penyakit:"Busuk Daun (Late Blight)",patogen:"Phytophthora infestans",gejala:"Daun bercak basah gelap, batang menghitam, umbi membusuk."},
+    semangka:{nama:"Semangka",ilmiah:"Citrullus lanatus",penyakit:"Embun Bulu",patogen:"Pseudoperonospora cubensis",gejala:"Daun kuning bercorak mosaik, bawah daun berjamur abu-abu."},
+    melon:{nama:"Melon",ilmiah:"Cucumis melo",penyakit:"Layu Bakteri",patogen:"Erwinia tracheiphila",gejala:"Tanaman layu mendadak, keluar lendir putih jika batang dipotong."},
+    kol:{nama:"Kol",ilmiah:"Brassica oleracea",penyakit:"Busuk Hitam",patogen:"Xanthomonas campestris pv. campestris",gejala:"Daun menguning bentuk V, urat daun menghitam."},
+    timun:{nama:"Mentimun",ilmiah:"Cucumis sativus",penyakit:"Embun Tepung",patogen:"Erysiphe cichoracearum / Podosphaera xanthii",gejala:"Daun tertutup bubuk putih, menguning dan rontok."},
+    stroberi:{nama:"Stroberi",ilmiah:"Fragaria × ananassa",penyakit:"Busuk Akar",patogen:"Phytophthora fragariae",gejala:"Akar coklat gelap & busuk, daun layu dari bawah."},
+    terung:{nama:"Terung",ilmiah:"Solanum melongena",penyakit:"Bercak Daun Cercospora",patogen:"Cercospora melongenae",gejala:"Daun muncul bercak abu-abu bulat dengan tepi coklat."}
+};
 
-    { no:2, tanaman:"Gandum", penyakit:"Karat Daun", gejala:"Bercak Timbul pada Permukaan Daun",
-      img:"https://i.postimg.cc/R0SxT3c7/leaf-rust.jpg" },
-
-    { no:3, tanaman:"Padi", penyakit:"Hawar Daun", gejala:"Ujung Daun Mengering",
-      img:"https://i.postimg.cc/rF1C5z9f/blight.jpg" },
-
-    { no:4, tanaman:"Tomat", penyakit:"Layu Fusarium", gejala:"Tanaman Layu meski Tanah Basah",
-      img:"https://i.postimg.cc/YqLD4DP9/fusarium.jpg" },
-
-    { no:5, tanaman:"Melon", penyakit:"Busuk Batang", gejala:"Batang Bagian dalam Cokelat",
-      img:"https://i.postimg.cc/43jF9FB9/stem-rot.jpg" },
-
-    { no:6, tanaman:"Timun", penyakit:"Virus Daun Keriting", gejala:"Daun Keriting dan Mengecil",
-      img:"https://i.postimg.cc/9Mb8f7b1/curl-virus.jpg" },
-
-    { no:7, tanaman:"Pepaya", penyakit:"Bercak Daun Cincin", gejala:"Ada Cincin Konsentris",
-      img:"https://i.postimg.cc/yxDvH2kY/ring-spot.jpg" },
-
-    { no:8, tanaman:"Kentang", penyakit:"Layu Bakteri", gejala:"Tanaman Layu Mendadak",
-      img:"https://i.postimg.cc/MTQZxz4R/bacterial-wilt.jpg" },
-
-    { no:9, tanaman:"Cabai", penyakit:"Gummosis", gejala:"Getah Kental Keluar dari Batang",
-      img:"https://i.postimg.cc/MGbxS0pQ/gummosis.jpg" },
-
-    { no:10, tanaman:"Kelapa Sawit", penyakit:"Busuk Pangkal Batang", gejala:"Pangkal Batang Membusuk dan Hitam",
-      img:"https://i.postimg.cc/JzpsRgW0/basal-rot.jpg" }
-];
-
-const daftarGejala = [...new Set(data.map(d => d.gejala))];
-
-function isiDropdown() {
-    const g1 = document.getElementById('gejala1');
-    const g2 = document.getElementById('gejala2');
-
-    daftarGejala.forEach(g => {
-        g1.innerHTML += `<option value="${g}">${g}</option>`;
-        g2.innerHTML += `<option value="${g}">${g}</option>`;
-    });
+function bukaPage(pg){
+    document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+    document.getElementById(pg).classList.add('active');
+    window.scrollTo({top:0, behavior:'smooth'});
 }
 
-function updateGejala2() {
-    const dipilih = document.getElementById('gejala1').value;
-    const g2 = document.getElementById('gejala2');
-
-    g2.innerHTML = `<option value="">-- pilih gejala --</option>`;
-    daftarGejala
-        .filter(g => g !== dipilih)
-        .forEach(g => g2.innerHTML += `<option value="${g}">${g}</option>`);
-}
-
-function diagnosa() {
-    const g1 = document.getElementById('gejala1').value;
-    const g2 = document.getElementById('gejala2').value;
-    const hasilDiv = document.getElementById('hasil');
-
-    if (!g1) {
-        hasilDiv.innerHTML = `<div class="result-box" style="background:#ffe7e7;border-left:5px solid red;">
-            ❗ Pilih minimal 1 gejala terlebih dahulu.
-        </div>`;
-        return;
-    }
-
-    const kemungkinan = data.filter(d => d.gejala === g1 || d.gejala === g2);
-
-    if (kemungkinan.length === 0) {
-        hasilDiv.innerHTML = `<div class="result-box" style="background:#ffe7e7;border-left:5px solid red;">
-            ❗ Tidak ditemukan penyakit berdasarkan gejala tersebut.
-        </div>`;
-        return;
-    }
-
-    let output = `<div class="result-box"><b>HASIL DIAGNOSA</b><br><br>`;
-
-    kemungkinan.forEach(k => {
-        output += `
-            🌿 <b>${k.tanaman}</b><br>
-            Penyakit: <b>${k.penyakit}</b><br>
-            Gejala: ${k.gejala}<br><br>
-            <img src="${k.img}" class="img-penyakit"><br>
-        `;
+function renderData(){
+    const sel=document.getElementById('tanaman');
+    sel.innerHTML='<option value="">-- Pilih Tanaman --</option>';
+    Object.keys(data).forEach(k=>{
+        const opt=document.createElement('option'); opt.value=k; opt.textContent=data[k].nama;
+        sel.appendChild(opt);
     });
 
-    output += `</div>`;
-    hasilDiv.innerHTML = output;
+    const tableWrap=document.getElementById('tableWrap');
+    let html='<table><thead><tr><th>No</th><th>Tanaman</th><th>Nama Ilmiah</th><th>Penyakit</th><th>Patogen</th><th>Gejala</th></tr></thead><tbody>';
+    Object.keys(data).forEach((k,i)=>{
+        const d=data[k];
+        html+=`<tr><td>${i+1}</td><td>${d.nama}</td><td><i>${d.ilmiah}</i></td><td>${d.penyakit}</td><td><i>${d.patogen}</i></td><td>${d.gejala}</td></tr>`;
+    });
+    html+='</tbody></table>';
+    tableWrap.innerHTML=html;
 }
 
-function bukaSPK() {
-    document.getElementById('menuUtama').style.display = 'none';
-    document.getElementById('spkPage').style.display = 'block';
+function diagnosa(){
+    const sel=document.getElementById('tanaman');
+    const key=sel.value;
+    const out=document.getElementById('output');
+    if(!key){ out.style.display='block'; out.innerHTML='⚠️ Silakan pilih tanaman terlebih dahulu.'; return; }
+    const d=data[key];
+    out.style.display='block';
+    out.innerHTML=`<h3>${d.nama}</h3><b>Nama Ilmiah:</b> <i>${d.ilmiah}</i><br><b>Penyakit:</b> ${d.penyakit}<br><b>Patogen:</b> <i>${d.patogen}</i><br><b>Gejala:</b> ${d.gejala}`;
+    out.scrollIntoView({behavior:'smooth', block:'center'});
 }
 
-isiDropdown();
+document.addEventListener('DOMContentLoaded', ()=>{
+    renderData();
+    document.querySelectorAll('.nav button').forEach(btn=>{ btn.onclick=()=>bukaPage(btn.getAttribute('data-target')); });
+    document.getElementById('btnDiagnosa').onclick=diagnosa;
+    document.getElementById('btnMulai').onclick=()=>{
+        const w=document.getElementById('welcomeScreen');
+        w.style.animation='fadeOut 0.6s forwards';
+        setTimeout(()=>{ w.style.display='none'; bukaPage('pageAnggota'); },620);
+    };
+    document.getElementById('btnTampilkanMenu').onclick=()=>bukaPage('page1');
+    bukaPage('pageAnggota');
+});
 </script>
-
 </body>
 </html>
-<!DOCTYPE html>
-<html>
-<body>
-
-<h2>Test JS</h2>
-
-<button onclick="tes()">Klik aku</button>
-
-<p id="hasil"></p>
-
-<script>
-function tes() {
-   document.getElementById("hasil").innerHTML = "JavaScript BERJALAN ✔";
-}
-</script>
-
-</body>
-</html>
-
-
-
